Bug #8812
xge: variable set but not used
Start date:
2017-11-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Debug build error from gcc 6:
../../common/io/xge/hal/xgehal/xgehal-channel.c: In function '__hal_channel_dtr_next_not_completed': ../../common/io/xge/hal/xgehal/xgehal-channel.c:80:24: error: variable 'rxdp' set but not used [-Werror=unused-but-set-variable] xge_hal_ring_rxd_1_t *rxdp; /* doesn't matter 1, 3 or 5... */ ^~~~ ../../common/io/xge/hal/xgehal/xgehal-ring.c:79:21: error: variable 'from_dma' set but not used [-Werror=unused-but-set-variable] dma_addr_t to_dma, from_dma; ^~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8b9a0f1ef5cee53073074965f0ea1d015d66926f
commit 8b9a0f1ef5cee53073074965f0ea1d015d66926f Author: Toomas Soome <tsoome@me.com> Date: 2017-12-13T19:37:28.000Z 8812 xge: variable set but not used Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Ken Mays <maybird1776@yahoo.com> Approved by: Dan McDonald <danmcd@joyent.com>